public/stylesheets/main.css
/* ... */
#btnControlA:checked + label {
    background: #5ebb9e;
}

#btnControlB:checked + label {
    background: #5ebb9e;
}
/* END BUTTONS */

@media only screen and (max-width: 600px) {
    div.status-bar, .status-bar-user {
        font-size: 1.5rem;
    }
}

.heading {
	font-weight: 200;
	font-size: 1.75rem;
    margin-top: 7rem !important;
    padding-bottom: 1em;
    max-width: 600px;
}

.heading-right {
    float: right;
}

.add-expense-link {
    font-weight: 200;
    color: rgba(184, 215, 255, 0.27);
    font-size: 1.5rem;
    max-width: 600px;
    /* border-bottom: 1px solid; */
}

.get-even-heading {
    float: right;
    font-weight: 200;
    color: rgba(184, 215, 255, 0.27);
    font-size: 1.5rem;
    max-width: 600px;
    /* border-bottom: 1px solid; */
} 

.heading2 { /*positions columns in the same place when they are side by side*/
	font-weight: 200;
	font-size: 2rem;
	letter-spacing: 0rem;
	margin: 10rem 0 1.45rem 0;
	opacity: 0; 
}

/* Style the tab */
.tab {
    background-color: #9eead2;
}
  
  /* Style the buttons inside the tab */
  .tab button {
    float: left;
    margin-bottom: .41rem;
  }
  
  /* Change background color of buttons on hover */
  .tab button:hover {
    background-color: #74c4ab;
  }
  
  /* Create an active/current tablink class */
  .tab button.active {
    background-color: #6bb39c;
  }

  .btn:focus {
    outline: none;
    box-shadow: none;
  }
  
  /* Style the tab content */
  .tabcontent {
    display: none;
  }

#full {
    display: block;
}

.payment-section {
    display: block;
    text-align: center;
    font-size: 2rem;
    color: #fbffbe;
    padding: 6rem 0px 1rem 0px;
}

@media only screen and (max-width: 766px) {
  div.heading2 {
    display: none;
  }
}

/* MAKES 2 COLUMNS ON IPHONE LANDSCAPE */
@media only screen 
and (min-device-width : 375px) 
and (max-device-width : 812px) 
and (-webkit-device-pixel-ratio : 3)
and (orientation : landscape) {
    .table-col {
        max-width: 50%;
    }
}

@media only screen 
and (min-device-width : 375px) 
and (max-device-width : 667px) 
and (orientation : landscape) { 
    .table-col {
        max-width: 50%;
    }
}

label {
	margin-bottom: 0;
}

a:hover {
    color: #fff;
}

.col-centered {
	float: none;
	margin: 0 auto;
}

.main-content {
    max-width: 600px;
    z-index: 1;
}

.table-col {
    max-width: 800px;
}

.spacer {
    height: 1rem;
}

.form-group {
    margin-bottom: .5rem;
}

.form-control {
	font-weight: 400;
	text-align: left;
	padding: .75rem 1.5rem;
	border-radius: .4rem;
	font-size: 1rem;
	letter-spacing: 0rem;
}

.form-control:disabled {
    background-color: #6ab39c78;
    color: #211c33;
}

/* .form-control:disabled:hover {
    background-color: #ffffff;
    color: #211c33;
} */

/* .navigation {
	margin-top: 2rem;
} */

.table-user {
	font-size: 1.25rem;
	padding: .2rem 0 .3rem 1rem;
	font-weight: 200;
	background-color: #2b273f;
	border-radius: .5rem;
    letter-spacing: 0rem;
    color: #fff;
    width: 100%;
    margin-top: 1rem;
}

.table-user-clicked {
    background-color: #26223a;
}

.total-spent {
	font-size: 1.25rem;
	padding-right: .8rem;
	font-weight: 200;
	border-radius: .5rem;
	letter-spacing: 0rem;
	float: right;
}

.line-item {
    font-size: .85rem;
    font-weight: 200;
    color: rgba(255, 255, 255, 0.623);
    padding: .5rem;
}

.item-users {
    display: none;
}

.item-id {
    display: none;
}

.item-date {
    max-width: 10%;
    text-align: left;
}

.item-expense {
    text-align: center;
}

.item-cost {
    max-width: 10%;
    text-align: right;
}

.item-delete {
    max-width: 20%;
    text-align: right;
    cursor: pointer;
}

.footer {
	font-weight: 100;
	font-size: 0.5rem;
    margin-top: 18rem !important;
    margin-bottom: 4rem !important;
    max-width: 600px;
}

/*CALENDAR*/
.ui-widget {
    font-family: Arial,Helvetica,sans-serif;
}

/* .ui-widget-content {
	border: 1px solid #ffffff;
	background: #ffffff;
	color: #2c333a !important;
	font-weight: 200 !important;
}

.ui-widget-header {
    border: 1px solid #caa8a8;
    background: #fff !important;
    color: #2c333a !important;
    font-weight: 200 !important;
} */

.ui-corner-all{
    border-radius: 5px !important;
}

.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active {
    border: 1px solid #b9b9b9;
    background: #ffffff !important;
    font-weight: normal;
    color: #3e3e50;
}

.ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight {
    border: 1px solid #000 !important;
    background: #fffa90;
    color: #000 !important;
}

.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active {
    border: none;
    background: #fff;
    font-weight: 100;
    color: #757575;
}

/* HIDE NUMBER INDICATOR */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    /* display: none; <- Crashes Chrome on hover */
    -webkit-appearance: none;
    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
}


/*APPLE PAY BUTTON*/
/* @supports (-webkit-appearance: -apple-pay-button) { 
    .apple-pay-button {
        display: inline-block;
        -webkit-appearance: -apple-pay-button;
    }
    .apple-pay-button-black {
        -apple-pay-button-style: black;
    }
    .apple-pay-button-white {
        -apple-pay-button-style: white;
        max-width: 8rem;
        margin-top: 1rem;
    }

    .coming-soon {
        color: white;
        font-weight: 100;
        font-size: .25rem;
    }
    
    .apple-pay-button-white-with-line {
        -apple-pay-button-style: white-outline;
    }
}
/* ... */

